--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
             <p>Thank you for your support!</p>
         </div>
     </div>
-    <script src="app.js"></script>
+    <script src="2048.js"></script>
 </body>
 </html>
